
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_4__ ;
typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


typedef int u8 ;
struct TYPE_8__ {int offset; int length; } ;
struct TYPE_7__ {int length; int offset; } ;
struct TYPE_6__ {int offset; int length; } ;
struct TYPE_5__ {int offset; int length; } ;
struct fb_var_screeninfo {TYPE_4__ transp; TYPE_3__ blue; TYPE_2__ green; TYPE_1__ red; } ;



__attribute__((used)) static void drm_fb_helper_fill_pixel_fmt(struct fb_var_screeninfo *var,
      u8 depth)
{
 switch (depth) {
 case 8:
  var->red.offset = 0;
  var->green.offset = 0;
  var->blue.offset = 0;
  var->red.length = 8;
  var->green.length = 8;
  var->blue.length = 8;
  var->transp.offset = 0;
  var->transp.length = 0;
  break;
 case 15:
  var->red.offset = 10;
  var->green.offset = 5;
  var->blue.offset = 0;
  var->red.length = 5;
  var->green.length = 5;
  var->blue.length = 5;
  var->transp.offset = 15;
  var->transp.length = 1;
  break;
 case 16:
  var->red.offset = 11;
  var->green.offset = 5;
  var->blue.offset = 0;
  var->red.length = 5;
  var->green.length = 6;
  var->blue.length = 5;
  var->transp.offset = 0;
  break;
 case 24:
  var->red.offset = 16;
  var->green.offset = 8;
  var->blue.offset = 0;
  var->red.length = 8;
  var->green.length = 8;
  var->blue.length = 8;
  var->transp.offset = 0;
  var->transp.length = 0;
  break;
 case 32:
  var->red.offset = 16;
  var->green.offset = 8;
  var->blue.offset = 0;
  var->red.length = 8;
  var->green.length = 8;
  var->blue.length = 8;
  var->transp.offset = 24;
  var->transp.length = 8;
  break;
 default:
  break;
 }
}
